full-moon/tests/cases/fail/parser/function-3/error_display.snap
---
source: full-moon/tests/fail_cases.rs
assertion_line: 56
expression: "String::from_utf8(output.into_inner()).unwrap()"
input_file: full-moon/tests/cases/fail/parser/function-3
---
error[ast]: expected function name
  ┌─ source.lua:1:9
  │
1 │ function() end
  │         ^

error[ast]: expected an expression after `(`
  ┌─ source.lua:1:9
  │
1 │ function() end
  │         ^

error[ast]: unexpected token, this needs to be a statement
  ┌─ source.lua:1:10
  │
1 │ function() end
  │          ^


